# Copyright © SixtyFPS GmbH <info@sixtyfps.io>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "document-features"
version = "0.1.0"
authors = ["SixtyFPS <info@sixtyfps.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sixtyfpsui/document-features"
homepage = "https://sixtyfps.io"
description = "Extract documentation for the feature flags from comments in Cargo.toml"
categories = ["development-tools"]
keywords = ["documentation", "features", "rustdoc", "macro"]

[lib]
proc-macro = true
path = "lib.rs"

[features]
default = []

## Internal feature used only for the tests, don't enable
self-test = []
